fix(eds-demo): 💄 Remove background color for active table row cells to align with figma

--- a/packages/eds-demo/src/app/(exercise)/dynamic/styles.module.css
+++ b/packages/eds-demo/src/app/(exercise)/dynamic/styles.module.css
@@ -190,7 +190,6 @@ Use Dev Mode in Figma to inspect elements and find the variable name.
 /* Table data cell in a selected row */
 
 .tr--active .td {
-  background-color: var(--eds-color-bg-fill-muted-default);
 }
 
 /* Table header */
